enable copy to the clipboard

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,8 +5,7 @@
 set-option -g base-index 1
 
 # Set the maximum number of lines held in window history.
-set -g history-limit 100000
-
+set-option -g history-limit 100000
 
 #################
 ##### TITLE #####
@@ -36,7 +35,7 @@ set -g status-left '#{?client_prefix,#[bg=green] , }'
 set-option -g status-right ""
 
 # Set status line style for the currently active window.
-set-window-option -g window-status-current-style "underscore"
+set-window-option -g window-status-current-style "none,underscore"
 
 # Set status line style for windows with an activity alert.
 set-window-option -g window-status-activity-style "none,bold"
@@ -174,9 +173,12 @@ bind-key -T prefix l select-pane -R
 bind-key -T prefix Escape copy-mode
 # Insert the contents of a paste buffer into the specified pane.
 bind-key -T prefix p paste-buffer
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
-bind-key -T copy-mode-vi Escape send -X cancel
+bind-key -T copy-mode-vi Escape send-keys -X cancel
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection-and-cancel pbcopy
+bind-key -T copy-mode    MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel pbcopy
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel pbcopy
+
 
 ## Misc
 # Display a large clock.
