--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -67,6 +67,9 @@ set-window-option -g pane-border-style "fg=black,bg=default"
 # Set the pane border style for the currently active pane.
 set-window-option -g pane-active-border-style "fg=black,bg=default"
 
+# Pass focus events through to applications
+set-option -g focus-events on
+
 
 ###############
 ##### KEY #####
