Support true colour

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,6 +7,9 @@ set-option -g base-index 1
 # Set the maximum number of lines held in window history.
 set-option -g history-limit 100000
 
+# Supports RGB colour with the SGR escape sequences (true colour).
+set-option -a terminal-features ",alacritty:RGB,xterm-kitty:RGB"
+
 #################
 ##### TITLE #####
 #################
