--- a/zed/settings.json
+++ b/zed/settings.json
@@ -7,7 +7,7 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
-  "theme": "Atelier Forest Light",
+  "theme": "One Light",
   "telemetry": {
     "diagnostics": false,
     "metrics": false
