--- a/zed/settings.json
+++ b/zed/settings.json
@@ -13,15 +13,14 @@
       "model": "gpt-4.1"
     }
   },
-  "theme": "One Light",
   "telemetry": {
     "diagnostics": false,
     "metrics": false
   },
-  "ui_font_size": 16,
-  "buffer_font_size": 16,
   "vim_mode": true,
-  "relative_line_numbers": true,
+  "vim": {
+    "toggle_relative_line_numbers": true
+  },
   "soft_wrap": "editor_width",
   "format_on_save": "off",
   "file_scan_exclusions": ["**/.git", "**/.venv"]
